--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>عرض المزيد/أقل</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Amiri', serif; /* استخدام خط جميل لجميع النصوص */
             direction: rtl;
             text-align: right;
             margin: 20px;
@@ -16,8 +18,8 @@
         }
         .section h3 {
             margin: 0 0 10px;
-            font-family: 'Ruqa', sans-serif; /* تطبيق خط الرقعة على العناوين */
-            font-size: 20px; /* تكبير حجم الخط للعناوين */
+            font-family: 'Amiri', serif; /* تطبيق خط أميري على العناوين */
+            font-size: 24px; /* تكبير حجم الخط للعناوين */
         }
         .text {
             overflow: hidden;
