--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3>العنوان الأول</h3>
         <div class="text">
             هذه أول جملة من النص الأول. هذه هي الجملة الثانية من النص الأول.
-            بقية النص هنا: الجملة الثالثة. الجملة الرابعة. الجملة الخامسة. الجملة السادسة. الجملة السابعة. الجملة الثامنة. الجملة التاسعة. الجملة العاشرة.
+            بقية النص هنا: الجملة الثالثة. الجملة الرابعة. الجملة الخامسة. الجملة hhdjfdfjdjfndjfnjndfljnjdfndjlfnjdlnfljdfjdfljdfjndfldsjfdfkjdlkfnjdlfndjfkldnjflkjmdsfkljmdksljfmkldsfjmkldsfjmkldsfjmjdklsfmdjsklfnjmdjsfklndmjfnmdjsfkndsjfkdsnjfklösdnkjfndsjkfndkjsfnsjdklfnkjdsfnmkjsdnfjkdslönfsdjklfnjdkslnfmkdjsfnmjsdklfnsdmjkfnsdmkjfnjdkslnfjdksnfdjskflndsöjlfjnsdjlkfndjklfdjskfn الجملة السابعة. الجملة الثامنة. الجملة التاسعة. الجملة العاشرة.
         </div>
         <button class="toggle-btn" onclick="toggleText(this)">عرض المزيد</button>
     </div>
@@ -55,7 +55,7 @@
         <h3>العنوان الثاني</h3>
         <div class="text">
             هذه أول جملة من النص الثاني. هذه هي الجملة الثانية من النص الثاني.
-            بقية النص هنا: الجملة الثالثة. الجملة الرابعة. الجملة الخامسة. الجملة السادسة. الجملة السابعة. الجملة الثامنة. الجملة التاسعة. الجملة العاشرة.
+            بقية النص هنا: الجملة الثالثة. الجملة الرابعة. الجملة الخامسة. الجملة السادسة. الجملة السابعة. الجملة oiljkjsdoiwkjsdoikejsdiknjesdknlijkwdnfijlkdnsfliuajkhndilakhnajlsknfedjslkhnirudjlshfniuljkdhfniujdslkfniucjkdnfcirjkdfn crjhndfsuilkahnufljcndiujbniurjcbnjfbncjkrbfsdnmfxvcejkrbldnsfcnbirkdlsjfncjrkdsfncjkldsnfö<jlnfrbnckrndlsajkn الجملة التاسعة. الجملة العاشرة.
         </div>
         <button class="toggle-btn" onclick="toggleText(this)">عرض المزيد</button>
     </div>
