--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عرض المزيد/أقل</title>
+    <title>معلومات عن سوريا</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
 
         body {
-            font-family: 'Amiri', serif; /* استخدام خط جميل لجميع النصوص */
+            font-family: 'Amiri', serif;
             direction: rtl;
             text-align: right;
             margin: 20px;
@@ -18,18 +18,18 @@
         }
         .section h3 {
             margin: 0 0 10px;
-            font-family: 'Amiri', serif; /* تطبيق خط أميري على العناوين */
-            font-size: 24px; /* تكبير حجم الخط للعناوين */
+            font-family: 'Amiri', serif;
+            font-size: 24px;
         }
         .text {
             overflow: hidden;
             display: -webkit-box;
-            -webkit-line-clamp: 2; /* عرض أول سطرين */
+            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            font-size: 18px; /* تكبير حجم النص */
+            font-size: 18px;
         }
         .text.expanded {
-            -webkit-line-clamp: unset; /* إظهار النص كاملاً عند التوسيع */
+            -webkit-line-clamp: unset;
         }
         .toggle-btn {
             cursor: pointer;
@@ -39,25 +39,45 @@
             padding: 0;
             font-size: 16px;
         }
+        .info-section {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-top: 20px;
+        }
+        .info-section h3 {
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+        .info-item {
+            margin-bottom: 15px;
+        }
+        .info-item img {
+            max-width: 100%;
+            height: auto;
+        }
+        .info-item audio {
+            width: 100%;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
-    <div class="section">
-        <h3>العنوان الأول</h3>
-        <div class="text">
-            هذه أول جملة من النص الأول. هذه هي الجملة الثانية من النص الأول.
-            بقية النص هنا: الجملة الثالثة. الجملة الرابعة. الجملة الخامسة. الجملة hhdjfdfjdjfndjfnjndfljnjdfndjlfnjdlnfljdfjdfljdfjndfldsjfdfkjdlkfnjdlfndjfkldnjflkjmdsfkljmdksljfmkldsfjmkldsfjmkldsfjmjdklsfmdjsklfnjmdjsfklndmjfnmdjsfkndsjfkdsnjfklösdnkjfndsjkfndkjsfnsjdklfnkjdsfnmkjsdnfjkdslönfsdjklfnjdkslnfmkdjsfnmjsdklfnsdmjkfnsdmkjfnjdkslnfjdksnfdjskflndsöjlfjnsdjlkfndjklfdjskfn الجملة السابعة. الجملة الثامنة. الجملة التاسعة. الجملة العاشرة.
-        </div>
-        <button class="toggle-btn" onclick="toggleText(this)">عرض المزيد</button>
-    </div>
+    <!-- الأقسام السابقة هنا -->
 
-    <div class="section">
-        <h3>العنوان الثاني</h3>
-        <div class="text">
-            هذه أول جملة من النص الثاني. هذه هي الجملة الثانية من النص الثاني.
-            بقية النص هنا: الجملة الثالثة. الجملة الرابعة. الجملة الخامسة. الجملة السادسة. الجملة السابعة. الجملة oiljkjsdoiwkjsdoikejsdiknjesdknlijkwdnfijlkdnsfliuajkhndilakhnajlsknfedjslkhnirudjlshfniuljkdhfniujdslkfniucjkdnfcirjkdfn crjhndfsuilkahnufljcndiujbniurjcbnjfbncjkrbfsdnmfxvcejkrbldnsfcnbirkdlsjfncjrkdsfncjkldsnföjlnfrbnckrndlsajkn الجملة التاسعة. الجملة العاشرة.
+    <div class="info-section">
+        <h3>معلومات عن سوريا</h3>
+        <div class="info-item">
+            <h4>علم سوريا</h4>
+            <iframe src="https://ar.wikipedia.org/wiki/ملف:Flag_of_Syria.svg" width="100%" height="300px" frameborder="0"></iframe>
         </div>
-        <button class="toggle-btn" onclick="toggleText(this)">عرض المزيد</button>
+        <div class="info-item">
+            <h4>النشيد الوطني السوري</h4>
+            <iframe src="https://ar.wikipedia.org/wiki/حماة_الديار" width="100%" height="100px" frameborder="0"></iframe>
+        </div>
+        <div class="info-item">
+            <h4>شعار سوريا</h4>
+            <iframe src="https://ar.wikipedia.org/wiki/ملف:Coat_of_arms_of_Syria.svg" width="100%" height="300px" frameborder="0"></iframe>
+        </div>
     </div>
 
     <script>
