--- a/index.html
+++ b/index.html
@@ -21,43 +21,23 @@
             font-family: 'Amiri', serif;
             font-size: 24px;
         }
-        .text {
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            font-size: 18px;
-        }
-        .text.expanded {
-            -webkit-line-clamp: unset;
-        }
-        .toggle-btn {
-            cursor: pointer;
-            color: blue;
-            border: none;
-            background: none;
-            padding: 0;
-            font-size: 16px;
-        }
         .info-section {
             border: 1px solid #ccc;
-            padding: 10px;
+            padding: 20px;
             margin-top: 20px;
+            text-align: center;
         }
         .info-section h3 {
             font-size: 22px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         .info-item {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
         .info-item img {
             max-width: 100%;
-            height: auto;
-        }
-        .info-item audio {
-            width: 100%;
-            margin-top: 10px;
+            height: 200px;
+            object-fit: contain;
         }
     </style>
 </head>
@@ -68,28 +48,13 @@
         <h3>معلومات عن سوريا</h3>
         <div class="info-item">
             <h4>علم سوريا</h4>
-            <iframe src="https://ar.wikipedia.org/wiki/ملف:Flag_of_Syria.svg" width="100%" height="300px" frameborder="0"></iframe>
-        </div>
-        <div class="info-item">
-            <h4>النشيد الوطني السوري</h4>
-            <iframe src="https://ar.wikipedia.org/wiki/حماة_الديار" width="100%" height="100px" frameborder="0"></iframe>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Flag_of_the_Syrian_revolution.svg" alt="علم سوريا">
         </div>
         <div class="info-item">
             <h4>شعار سوريا</h4>
-            <iframe src="https://ar.wikipedia.org/wiki/ملف:Coat_of_arms_of_Syria.svg" width="100%" height="300px" frameborder="0"></iframe>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Coat_of_arms_of_Syria_%282024–present%29.svg" alt="شعار سوريا">
         </div>
     </div>
 
-    <script>
-        function toggleText(button) {
-            const textElement = button.previousElementSibling;
-            textElement.classList.toggle('expanded');
-            if (textElement.classList.contains('expanded')) {
-                button.textContent = 'عرض أقل';
-            } else {
-                button.textContent = 'عرض المزيد';
-            }
-        }
-    </script>
 </body>
 </html>
