--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             height: 200px;
             object-fit: contain;
         }
+        .info-item iframe {
+            width: 100%;
+            height: 315px;
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +58,10 @@
         <div class="info-item">
             <h4>شعار سوريا</h4>
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Coat_of_arms_of_Syria_%282024–present%29.svg" alt="شعار سوريا">
+        </div>
+        <div class="info-item">
+            <h4>النشيد الوطني السوري</h4>
+            <iframe src="https://www.youtube.com/embed/bv7-gn4UvjI" allowfullscreen></iframe>
         </div>
     </div>
 
