--- a/index.html
+++ b/index.html
@@ -3,67 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>معلومات عن سوريا</title>
+    <title>معلومات عن الأشجار</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
-
         body {
-            font-family: 'Amiri', serif;
+            font-family: Arial, sans-serif;
             direction: rtl;
             text-align: right;
             margin: 20px;
         }
-        .section {
+        .content {
+            font-size: 20px;
             margin-bottom: 20px;
         }
-        .section h3 {
-            margin: 0 0 10px;
-            font-family: 'Amiri', serif;
-            font-size: 24px;
-        }
-        .info-section {
-            border: 1px solid #ccc;
-            padding: 20px;
-            margin-top: 20px;
-            text-align: center;
-        }
-        .info-section h3 {
-            font-size: 22px;
-            margin-bottom: 15px;
-        }
-        .info-item {
-            margin-bottom: 20px;
-        }
-        .info-item img {
-            max-width: 100%;
-            height: 200px;
-            object-fit: contain;
-        }
-        .info-item iframe {
-            width: 100%;
-            height: 315px;
+        .read-btn {
+            background-color: #4CAF50;
+            color: white;
             border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .read-btn:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <!-- الأقسام السابقة هنا -->
-
-    <div class="info-section">
-        <h3>معلومات عن سوريا</h3>
-        <div class="info-item">
-            <h4>علم سوريا</h4>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/Flag_of_the_Syrian_revolution.svg" alt="علم سوريا">
-        </div>
-        <div class="info-item">
-            <h4>شعار سوريا</h4>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Coat_of_arms_of_Syria_%282024–present%29.svg" alt="شعار سوريا">
-        </div>
-        <div class="info-item">
-            <h4>النشيد الوطني السوري</h4>
-            <iframe src="https://www.youtube.com/embed/bv7-gn4UvjI" allowfullscreen></iframe>
-        </div>
+    <h1>معلومات عن الأشجار</h1>
+    <div class="content" id="treeInfo">
+        الأشجار جزء مهم من الطبيعة. توفر الأكسجين، وتساعد في تقليل التلوث، وتعتبر موطنًا للعديد من الكائنات الحية. كما أنها تضيف جمالاً إلى البيئة.
     </div>
+    <button class="read-btn" onclick="readText()">استمع إلى النص</button>
 
+    <script>
+        function readText() {
+            const text = document.getElementById('treeInfo').textContent;
+            const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = 'ar';
+            window.speechSynthesis.speak(utterance);
+        }
+    </script>
 </body>
 </html>
