--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <body>
     <h1>معلومات عن الأشجار</h1>
     <div class="content" id="treeInfo">
-        الأشجار جزء مهم من الطبيعة. توفر الأكسجين، وتساعد في تقليل التلوث، وتعتبر موطنًا للعديد من الكائنات الحية. كما أنها تضيف جمالاً إلى البيئة.
+        
+      الأشجار جزء مهم من الطبيعة. توفر الأكسجين، وتساعد في تقليل التلوث، وتعتبر موطنًا للعديد من الكائنات الحية. كما أنها تضيف جمالاً إلى البيئة وهناك عدة أنواع من الاشجار التي تنتج الفواكه والخضروات.
     </div>
     <button class="read-btn" onclick="readText()">استمع إلى النص</button>
 
